Build fixes for MSVC 7.1 and mingw (bug 451881, patch from neil@parkwaycc.co.uk).